base/argo-cd/base/applicationset-controller/argocd-applicationset-controller-service.yaml
apiVersion: v1
kind: Service
metadata: # kpt-merge: /argocd-applicationset-controller
  labels:
    app.kubernetes.io/component: applicationset-controller
    app.kubernetes.io/name: argocd-applicationset-controller
    app.kubernetes.io/part-of: argocd
  name: argocd-applicationset-controller
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|default|argocd-applicationset-controller'
spec:
  ports:
  - name: webhook
    port: 7000
    protocol: TCP
    targetPort: webhook
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/name: argocd-applicationset-controller
