base/argo-cd/base/applicationset-controller/argocd-applicationset-controller-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: # kpt-merge: /argocd-applicationset-controller-network-policy
  name: argocd-applicationset-controller-network-policy
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.k8s.io|NetworkPolicy|default|argocd-applicationset-controller-network-policy'
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-applicationset-controller
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 7000
        - protocol: TCP
          port: 8080
  policyTypes:
    - Ingress
